--- a/packages/viewer/css/viewer.mobile.css
+++ b/packages/viewer/css/viewer.mobile.css
@@ -268,17 +268,20 @@
 	#gd-modal-error {
 		margin: 0;
 	}
+	.gd-container-spinner {
+		left: 29%;
+	}
 	/*
 	******************************************
 	PAGES
 	******************************************
-	*/
-	#gd-pages {
-		padding-top: 48px;
-	}
+	*/	
 	.gd-page{
 		width: -webkit-fill-available !important;
 		height: auto !important;
+		min-width: unset !important;
+		min-height: unset !important;
+		margin: 5px 0px;
 	}
 	.gd-landscape{
 		margin: -111px;
